added RabbitMQ and some Refactor